fix z-index with sticky in deck select

--- a/react-frontend/assets/css/style.styl
+++ b/react-frontend/assets/css/style.styl
@@ -847,7 +847,6 @@ textarea.deck-import:focus
 div.sticky
   position: sticky;
   top: 56
-  z-index: 1
 
 div.sticky-insearch
   background-color: var(--bg-primary)
